--- a/solutions/a3/Untitled.ipynb
+++ b/solutions/a3/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "data = open(\"marking.txt\").read()\n",
+    "data = open(\"A3F2018_marking.txt\").read()\n",
     "\n",
     "pattern = r\"\\n*(\\w+[ \\d]*: \\[\\/\\d+\\])\\n*\"# r\"(\\w+( \\d)*: \\[\\/\\d*\\])\\n\"\n",
     "re.findall(pattern, data)"
